--- a/index.html
+++ b/index.html
@@ -72,17 +72,17 @@
             <div class=" block-image grid-x grid-padding-x">
             <div class="cell small-12 large-4">
                 <div class="card-image grid-x grid-margin-x align-center">
-                    <a href="#"><img src="/assets/img/asset1.png" alt="angle-right"></a>
+                    <a href="#"><img src="assets/img/asset1.png" alt="angle-right"></a>
                 </div>
             </div>
             <div class="cell small-12 large-4">
                 <div class="card-image grid-x grid-margin-x align-center">
-                    <a href="#"><img src="/assets/img/148157989@2x.png" alt="bridge"></a>
+                    <a href="#"><img src="assets/img/148157989@2x.png" alt="bridge"></a>
                 </div>
             </div>
             <div class="cell small-12 large-4">
                 <div class="card-image grid-x grid-margin-x align-center">
-                    <a href="#"><img src="/assets/img/83812863@2x.png" alt="girl"></a>
+                    <a href="#"><img src="assets/img/83812863@2x.png" alt="girl"></a>
                 </div>
             
             </div>
